--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -94,14 +94,14 @@
      "output_type": "stream",
      "text": [
       "Название: Алгебра и начала математического анализа 11 класс, Автор: Колягин Ю. М., Год издания: 2014\n",
-      "Вы читаете учебник 'Алгебра и начала математического анализа 11 класс' по предмету 'Математика'\n",
       "Вам выдали книгу 'Алгебра и начала математического анализа 11 класс'\n",
+      "Вы читаете учебник 'Алгебра и начала математического анализа 11 класс' по предмету 'Математика'\n",
       "Название: Война и мир, Автор: Толстой Л.Н., Год издания: 1869\n",
-      "Вы прочитали книгу 'Война и мир'\n",
       "Вам выдали художественную книгу 'Война и мир', жанр которой 'Исторический роман'\n",
+      "Вы читаете книгу 'Война и мир'\n",
       "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Область науки: Физика\n",
-      "Вы прочитали книгу 'Классическая механика'\n",
-      "Вам выдали книгу 'Классическая механика'\n"
+      "Вам выдали книгу 'Классическая механика'\n",
+      "Вы читаете книгу 'Классическая механика'\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     "\n",
     "    public virtual void Read() \n",
     "    {\n",
-    "        Console.WriteLine($\"Вы прочитали книгу '{Title}'\");\n",
+    "        Console.WriteLine($\"Вы читаете книгу '{Title}'\");\n",
     "    }\n",
     "\n",
     "    public virtual void Borrow() \n",
@@ -216,16 +216,16 @@
     "ScientificLiterature physicsBook = new ScientificLiterature(\"Классическая механика\", \"Ньютон И.С.\", 1687, \"Физика\");\n",
     "\n",
     "mathTextbook.GetInfo();\n",
-    "mathTextbook.Read();\n",
     "mathTextbook.Borrow();\n",
+    "mathTextbook.Read();\n",
     "\n",
     "novel.GetInfo();\n",
-    "novel.Read();\n",
     "novel.Borrow();\n",
+    "novel.Read();\n",
     "\n",
     "physicsBook.GetInfo();\n",
-    "physicsBook.Read();\n",
-    "physicsBook.Borrow();"
+    "physicsBook.Borrow();\n",
+    "physicsBook.Read();"
    ]
   }
  ],
