--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 5\n"
    ]
   },
   {
@@ -26,7 +26,43 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Описание задачи:\n",
+    "\n",
+    "Создать базовый класс Book в C#, который будет представлять информацию о\n",
+    "книгах. На основе этого класса разработать 2-3 производных класса,\n",
+    "демонстрирующих принципы наследования и полиморфизма. В каждом из классов\n",
+    "должны быть реализованы новые атрибуты и методы, а также переопределены\n",
+    "некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "\n",
+    "Требования к базовому классу Book:\n",
+    "\n",
+    "• Атрибуты: Название (Title), Автор (Author), Год издания (YearOfPublication).\n",
+    "\n",
+    "• Методы:\n",
+    "\n",
+    "o GetInfo(): метод для получения информации о книге в виде строки.\n",
+    "\n",
+    "o Read(): метод для вывода сообщения о чтении книги.\n",
+    "\n",
+    "o Borrow(): метод для вывода сообщения о выдаче книги на чтение.\n",
+    "\n",
+    "<h2 style=\"color:DodgerBlue\">Требования к производным классам:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "1. Учебник (Textbook): Должен содержать дополнительные атрибуты, такие как\n",
+    "Предмет (Subject). Метод Read() должен быть переопределен для\n",
+    "добавления информации о предмете при чтении учебника.\n",
+    "\n",
+    "2. Художественная литература (Fiction): Должен содержать дополнительные\n",
+    "атрибуты, такие как Жанр (Genre). Метод Borrow() должен быть\n",
+    "переопределен для добавления информации о жанре при выдаче книги на\n",
+    "чтение.\n",
+    "\n",
+    "3. Научная литература (ScientificLiterature) (если требуется третий класс):\n",
+    "Должен содержать дополнительные атрибуты, такие как Область науки\n",
+    "(FieldOfScience). Метод GetInfo() должен быть переопределен для включения\n",
+    "информации об области науки в описании книги.\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) и реализуйте простое, сложное и множественное наследование"
@@ -43,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -52,8 +88,249 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Название: Алгебра и начала математического анализа 11 класс, Автор: Колягин Ю. М., Год издания: 2014, Издатель: Просвещение, Страниц: 320\n",
+      "Вам выдали книгу 'Алгебра и начала математического анализа 11 класс'\n",
+      "Вы читаете учебник 'Алгебра и начала математического анализа 11 класс' по предмету 'Математика'\n",
+      "Вы изучаете нужную тему учебника 'Алгебра и начала математического анализа 11 класс' по предмету 'Математика'\n",
+      "Вы вернули книгу 'Алгебра и начала математического анализа 11 класс'\n",
+      "Название: Война и мир, Автор: Толстой Л.Н., Год издания: 1869, Издатель: Эксмо, Страниц: 1200\n",
+      "Вам выдали художественную книгу 'Война и мир', жанр: 'Исторический роман'\n",
+      "Вы читаете книгу 'Война и мир'\n",
+      "Вы анализируете прочитанную главу книги 'Война и мир' жанра 'Исторический роман'\n",
+      "Вы вернули книгу 'Война и мир'\n",
+      "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Издатель: Наука, Страниц: 450, Область науки: Физика\n",
+      "Вам выдали книгу 'Классическая механика'\n",
+      "Вы читаете книгу 'Классическая механика'\n",
+      "Вы проводите обзор литературы по теме 'Физика' на основе книги 'Классическая механика'\n",
+      "Вы вернули книгу 'Классическая механика'\n",
+      "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
+      "Вам выдали книгу 'Научная энциклопедия'\n",
+      "Вы читаете книгу 'Научная энциклопедия'\n",
+      "Обзор литературы по теме 'Наука' из энциклопедии 'Научная энциклопедия'\n",
+      "Вы ищете информацию в энциклопедии 'Научная энциклопедия'\n",
+      "Вы вернули книгу 'Научная энциклопедия'\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public interface IBook \n",
+    "{\n",
+    "    string Title { get; set; }\n",
+    "    string Author { get; set; }\n",
+    "    int YearOfPublication { get; set; }\n",
+    "    string Publisher { get; set; }\n",
+    "    int Pages { get; set; }\n",
+    "\n",
+    "    void GetInfo();\n",
+    "    void Read();\n",
+    "    void Borrow();\n",
+    "    void Return();\n",
+    "    void Reserve();\n",
+    "}\n",
+    "\n",
+    "public interface ITextbook : IBook\n",
+    "{\n",
+    "    string Subject { get; set; }\n",
+    "    void Study();\n",
+    "}\n",
+    "\n",
+    "public interface IFiction : IBook\n",
+    "{\n",
+    "    string Genre { get; set; }\n",
+    "    void Analyze();\n",
+    "}\n",
+    "\n",
+    "public interface IScientificLiterature : IBook\n",
+    "{\n",
+    "    string FieldOfScience { get; set; }\n",
+    "    void ReviewLiterature();\n",
+    "}\n",
+    "\n",
+    "public interface IReferenceBook\n",
+    "{\n",
+    "    void FindInformation();\n",
+    "}\n",
+    "\n",
+    "public class Book : IBook\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Author { get; set; }\n",
+    "    public int YearOfPublication { get; set; }\n",
+    "    public string Publisher { get; set; }\n",
+    "    public int Pages { get; set; }\n",
+    "    public bool IsAvailable { get; set; }\n",
+    "\n",
+    "    public Book(string title, string author, int yearOfPublication, string publisher, int pages) \n",
+    "    {\n",
+    "        Title = title;\n",
+    "        Author = author;\n",
+    "        YearOfPublication = yearOfPublication;\n",
+    "        Publisher = publisher;\n",
+    "        Pages = pages;\n",
+    "        IsAvailable = true;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Read() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы читаете книгу '{Title}'\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Borrow() \n",
+    "    {\n",
+    "        if (IsAvailable)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вам выдали книгу '{Title}'\");\n",
+    "            IsAvailable = false;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' недоступна.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Return() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы вернули книгу '{Title}'\");\n",
+    "        IsAvailable = true;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Reserve() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Книга '{Title}' зарезервирована для вас.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Textbook : Book, ITextbook \n",
+    "{\n",
+    "    public string Subject { get; set; }\n",
+    "\n",
+    "    public Textbook(string title, string author, int yearOfPublication, string publisher, int pages, string subject)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages) \n",
+    "    {\n",
+    "        Subject = subject;\n",
+    "    }\n",
+    "\n",
+    "    public override void Read() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы читаете учебник '{Title}' по предмету '{Subject}'\");\n",
+    "    }\n",
+    "\n",
+    "    public void Study() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы изучаете нужную тему учебника '{Title}' по предмету '{Subject}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fiction : Book, IFiction \n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "\n",
+    "    public Fiction(string title, string author, int yearOfPublication, string publisher, int pages, string genre)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        Genre = genre;\n",
+    "    }\n",
+    "\n",
+    "    public override void Borrow()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вам выдали художественную книгу '{Title}', жанр: '{Genre}'\");\n",
+    "    }\n",
+    "\n",
+    "    public void Analyze() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы анализируете прочитанную главу книги '{Title}' жанра '{Genre}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class ScientificLiterature : Book, IScientificLiterature \n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public ScientificLiterature(string title, string author, int yearOfPublication, string publisher, int pages, string fieldOfScience)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
+    "    }\n",
+    "\n",
+    "    public void ReviewLiterature() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы проводите обзор литературы по теме '{FieldOfScience}' на основе книги '{Title}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Encyclopedia : Book, IScientificLiterature, IReferenceBook \n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public Encyclopedia(string title, string author, int yearOfPublication, string publisher, int pages, string fieldOfScience)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Энциклопедия: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
+    "    }\n",
+    "\n",
+    "    public void ReviewLiterature() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Обзор литературы по теме '{FieldOfScience}' из энциклопедии '{Title}'\");\n",
+    "    }\n",
+    "\n",
+    "    public void FindInformation() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы ищете информацию в энциклопедии '{Title}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Textbook mathTextbook = new Textbook(\"Алгебра и начала математического анализа 11 класс\", \"Колягин Ю. М.\", 2014, \"Просвещение\", 320, \"Математика\");\n",
+    "Fiction novel = new Fiction(\"Война и мир\", \"Толстой Л.Н.\", 1869, \"Эксмо\", 1200, \"Исторический роман\");\n",
+    "ScientificLiterature physicsBook = new ScientificLiterature(\"Классическая механика\", \"Ньютон И.С.\", 1687, \"Наука\", 450, \"Физика\");\n",
+    "Encyclopedia scienceEncyclopedia = new Encyclopedia(\"Научная энциклопедия\", \"Коллектив авторов\", 2022, \"Наука\", 1500, \"Наука\");\n",
+    "\n",
+    "mathTextbook.GetInfo();\n",
+    "mathTextbook.Borrow();\n",
+    "mathTextbook.Read();\n",
+    "mathTextbook.Study();\n",
+    "mathTextbook.Return();\n",
+    "\n",
+    "novel.GetInfo();\n",
+    "novel.Borrow();\n",
+    "novel.Read();\n",
+    "novel.Analyze();\n",
+    "novel.Return();\n",
+    "\n",
+    "physicsBook.GetInfo();\n",
+    "physicsBook.Borrow();\n",
+    "physicsBook.Read();\n",
+    "physicsBook.ReviewLiterature();\n",
+    "physicsBook.Return();\n",
+    "\n",
+    "scienceEncyclopedia.GetInfo();\n",
+    "scienceEncyclopedia.Borrow();\n",
+    "scienceEncyclopedia.Read();\n",
+    "scienceEncyclopedia.ReviewLiterature();\n",
+    "scienceEncyclopedia.FindInformation();\n",
+    "scienceEncyclopedia.Return();\n"
+   ]
   }
  ],
  "metadata": {
