--- a/Sprint2/Task1.ipynb
+++ b/Sprint2/Task1.ipynb
@@ -157,7 +157,79 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "\n",
+    "    public Vehicle(string make, string model)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Производитель: {Make}, Модель: {Model}\");\n",
+    "    }\n",
+    "}\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    public Car(string make, string model, int doors) : base(make, model)\n",
+    "    {\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "public class SportsCar : Car\n",
+    "{\n",
+    "    public bool IsConvertible { get; set; }\n",
+    "\n",
+    "    public SportsCar(string make, string model, int doors, bool isConvertible) \n",
+    "        : base(make, model, doors)\n",
+    "    {\n",
+    "        IsConvertible = isConvertible;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Автомобиль с откидным верхом: {IsConvertible}\");\n",
+    "    }\n",
+    "}\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    public Motorcycle(string make, string model, string engineType) : base(make, model)\n",
+    "    {\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Тип двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo();\n",
+    "\n",
+    "SportsCar mySportsCar = new SportsCar(\"Ferrari\", \"488 Spider\", 2, true);\n",
+    "mySportsCar.DisplayInfo();\n",
+    "\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Ducati\", \"Panigale V4\", \"V4\");\n",
+    "myMotorcycle.DisplayInfo();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -181,8 +253,87 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тип животного: Собака, Порода: Овчарка\n",
+      "Окрас: Чёрный\n",
+      "Тип животного: Волк, Порода: Русский\n",
+      "Окрас: Серый\n",
+      "Среда обитания: Северная Россия\n",
+      "Тип животного: Орёл, Порода: Пустынный\n",
+      "Размер: 65 см\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal \n",
+    "{\n",
+    "    public string TypeOfAnimals {get; set;}\n",
+    "    public string Breed {get;  set;}\n",
+    "    public Animal(string breed, string typeOfAnimal) \n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "        TypeOfAnimals = typeOfAnimal;\n",
+    "    }\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Тип животного: {TypeOfAnimals}, Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal \n",
+    "{\n",
+    "    private string Color {get; set;}\n",
+    "    public Dog(string breed, string typeOfAnimal, string color) : base(breed, typeOfAnimal) \n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "    public override void DisplayInfo() {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Окрас: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Wolf : Dog \n",
+    "{\n",
+    "    private string Habitat {get; set;}\n",
+    "    public Wolf(string breed, string typeOfAnimal, string color, string habitat) : base(breed, typeOfAnimal, color) \n",
+    "    {\n",
+    "        Habitat = habitat;\n",
+    "    }\n",
+    "    public override void DisplayInfo() \n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Среда обитания: {Habitat}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Eagle : Animal \n",
+    "{\n",
+    "    private int Size {get; set;} \n",
+    "    public Eagle(string breed, string typeOfAnimal, int size) : base(breed, typeOfAnimal) \n",
+    "    {\n",
+    "        Size = size;\n",
+    "    }\n",
+    "    public override void DisplayInfo() \n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Размер: {Size} см\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog(\"Овчарка\", \"Собака\", \"Чёрный\");\n",
+    "myDog.DisplayInfo();\n",
+    "\n",
+    "Wolf myWolf = new Wolf(\"Русский\", \"Волк\", \"Серый\", \"Северная Россия\");\n",
+    "myWolf.DisplayInfo();\n",
+    "\n",
+    "Eagle myEagle = new Eagle(\"Пустынный\", \"Орёл\", 65);\n",
+    "myEagle.DisplayInfo();"
+   ]
   }
  ],
  "metadata": {
