--- a/Sprint2/Task2.ipynb
+++ b/Sprint2/Task2.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -299,7 +299,78 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public abstract class Vehicle\n",
+    "{\n",
+    "    // Свойство Speed для определения скорости транспортного средства\n",
+    "    public int Speed { get; set; }\n",
+    "\n",
+    "    // Конструктор по умолчанию\n",
+    "    protected Vehicle()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "    }\n",
+    "\n",
+    "    // Метод Move, который будет переопределен в производных классах\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспортное средство движется.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// Интерфейс Car, определяющий специфику автомобиля\n",
+    "public interface ICar\n",
+    "{\n",
+    "    void Honk(); // Метод для сигнала гона\n",
+    "}\n",
+    "\n",
+    "// Интерфейс Motorcycle, определяющий специфику мотоцикла\n",
+    "public interface IMotorcycle\n",
+    "{\n",
+    "    void Wheelie(); // Метод для выполнения трюка \"колесо\"\n",
+    "}\n",
+    "\n",
+    "// Класс Car, реализующий интерфейс ICar и наследующий от Vehicle\n",
+    "public class Car : Vehicle, ICar\n",
+    "{\n",
+    "    public Car() : base()\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public void Honk()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль издает звук сигнала клаксона\");\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода Move\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        base.Move();\n",
+    "        Console.WriteLine(\"Автомобиль движется со скоростью \" + Speed);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Класс Motorcycle, реализующий интерфейс IMotorcycle и наследующий от Vehicle\n",
+    "public class Motorcycle : Vehicle, IMotorcycle\n",
+    "{\n",
+    "    public Motorcycle() : base()\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public void Wheelie()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоциклист выполняет трюк 'колесо'\");\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода Move\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        base.Move();\n",
+    "        Console.WriteLine(\"Мотоцикл движется со скоростью \" + Speed);\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -323,8 +394,93 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тип животного: Млекопитающее, Порода: Овчарка\n",
+      "Окрас: Чёрный\n",
+      "Собака лает\n",
+      "Собака скулит\n",
+      "Тип животного: Птица, Порода: Пустынный орёл\n",
+      "Размер: 65 см\n"
+     ]
+    }
+   ],
+   "source": [
+    "public abstract class Animal \n",
+    "{\n",
+    "    public string TypeOfAnimals {get; set ;}\n",
+    "    public string Breed {get ; set ;}\n",
+    "    public Animal(string typeOfAnimals, string breed) \n",
+    "    {\n",
+    "        TypeOfAnimals = typeOfAnimals;\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "    public virtual void DisplayInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Тип животного: {TypeOfAnimals}, Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IDog \n",
+    "{\n",
+    "    void Barking();\n",
+    "    void Whining();\n",
+    "}\n",
+    "\n",
+    "public interface IEagle \n",
+    "{\n",
+    "    int Size {get;}\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal, IDog \n",
+    "{\n",
+    "    private string Color {get ; set ;} \n",
+    "    public Dog(string typeOfAnimals, string breed, string color) : base(typeOfAnimals, breed) \n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "    public void Barking() \n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака лает\");\n",
+    "    }\n",
+    "    public void Whining() \n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака скулит\");\n",
+    "    }\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Окрас: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Eagle : Animal, IEagle {\n",
+    "\n",
+    "    public int Size { get; set; }\n",
+    "\n",
+    "    public Eagle(string typeOfAnimals, string breed, int size) : base(typeOfAnimals, breed) {\n",
+    "        Size = size;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Размер: {Size} см\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Dog myDog = new Dog(\"Млекопитающее\", \"Овчарка\", \"Чёрный\");\n",
+    "myDog.DisplayInfo();\n",
+    "myDog.Barking();\n",
+    "myDog.Whining();\n",
+    "\n",
+    "Eagle myEagle = new Eagle(\"Птица\", \"Пустынный орёл\", 65);\n",
+    "myEagle.DisplayInfo();"
+   ]
   }
  ],
  "metadata": {
