--- a/Sprint3/Task0.ipynb
+++ b/Sprint3/Task0.ipynb
@@ -88,7 +88,43 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public virtual void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Vehicle> vehicles = new List<Vehicle>\n",
+    "{\n",
+    "    new Car(),\n",
+    "    new Motorcycle(),\n",
+    "    new Vehicle() \n",
+    "};\n",
+    "\n",
+    "foreach (var vehicle in vehicles)\n",
+    "{\n",
+    "    vehicle.Drive(100); \n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,8 +148,58 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кошка Мяукает\n",
+      "Собака Гавкает\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal \n",
+    "{\n",
+    "    public virtual void MakeSound(string sound) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное {sound}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal \n",
+    "{\n",
+    "    public override void MakeSound(string sound) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака {sound}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal \n",
+    "{\n",
+    "    public override void MakeSound(string sound) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Кошка {sound}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Animal> animals = new List<Animal>{\n",
+    "    new Cat(),\n",
+    "    new Dog()\n",
+    "};\n",
+    "\n",
+    "foreach (var animal in animals) \n",
+    "{\n",
+    "    if (animal is Dog) \n",
+    "    {\n",
+    "        animal.MakeSound(\"Гавкает\");\n",
+    "    } \n",
+    "    else if (animal is Cat) \n",
+    "    {\n",
+    "        animal.MakeSound(\"Мяукает\");\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
