--- a/Sprint3/Task1.ipynb
+++ b/Sprint3/Task1.ipynb
@@ -174,7 +174,54 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public virtual void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется в {mode} режиме.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль переключает передачи вручную.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль оснащен автоматической коробкой передач.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "\n",
+    "myVehicle.Drive(60);\n",
+    "myVehicle.Drive(\"Eco\");\n",
+    "myVehicle.Drive(true);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,8 +245,71 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное издает звук с громкость 25 дБ\n",
+      "Животное издает тихий звук\n",
+      "Животное издает обычный звук\n",
+      "Собака лает с громкостью 75 дБ\n",
+      "Кошка мяукает с громкостью 5 дБ\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal \n",
+    "{\n",
+    "    public virtual void MakeSound(int volume) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное издает звук с громкость {volume} дБ\");\n",
+    "    }\n",
+    "    public void MakeSound(string mode) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное издает {mode} звук\");\n",
+    "    }\n",
+    "    public void MakeSound(bool isNatural) \n",
+    "    {\n",
+    "        if (isNatural) \n",
+    "        {\n",
+    "            Console.WriteLine($\"Животное издает обычный звук\");\n",
+    "        }\n",
+    "\n",
+    "        else \n",
+    "        {\n",
+    "            Console.WriteLine(\"Животное издает необычный звук, обученный хозяином\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal \n",
+    "{\n",
+    "    public override void MakeSound(int volume) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака лает с громкостью {volume} дБ\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal \n",
+    "{\n",
+    "    public override void MakeSound(int volume) \n",
+    "    {\n",
+    "        Console.WriteLine($\"Кошка мяукает с громкостью {volume} дБ\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "myAnimal.MakeSound(25);\n",
+    "myAnimal.MakeSound(\"тихий\");\n",
+    "myAnimal.MakeSound(true);\n",
+    "\n",
+    "Animal myDog = new Dog();\n",
+    "myDog.MakeSound(75);\n",
+    "\n",
+    "Animal myCat = new Cat();\n",
+    "myCat.MakeSound(5);"
+   ]
   }
  ],
  "metadata": {
