--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 5\n"
    ]
   },
   {
@@ -26,7 +26,43 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Описание задачи:\n",
+    "\n",
+    "Создать базовый класс Book в C#, который будет представлять информацию о\n",
+    "книгах. На основе этого класса разработать 2-3 производных класса,\n",
+    "демонстрирующих принципы наследования и полиморфизма. В каждом из классов\n",
+    "должны быть реализованы новые атрибуты и методы, а также переопределены\n",
+    "некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "\n",
+    "Требования к базовому классу Book:\n",
+    "\n",
+    "• Атрибуты: Название (Title), Автор (Author), Год издания (YearOfPublication).\n",
+    "\n",
+    "• Методы:\n",
+    "\n",
+    "o GetInfo(): метод для получения информации о книге в виде строки.\n",
+    "\n",
+    "o Read(): метод для вывода сообщения о чтении книги.\n",
+    "\n",
+    "o Borrow(): метод для вывода сообщения о выдаче книги на чтение.\n",
+    "\n",
+    "<h2 style=\"color:DodgerBlue\">Требования к производным классам:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "1. Учебник (Textbook): Должен содержать дополнительные атрибуты, такие как\n",
+    "Предмет (Subject). Метод Read() должен быть переопределен для\n",
+    "добавления информации о предмете при чтении учебника.\n",
+    "\n",
+    "2. Художественная литература (Fiction): Должен содержать дополнительные\n",
+    "атрибуты, такие как Жанр (Genre). Метод Borrow() должен быть\n",
+    "переопределен для добавления информации о жанре при выдаче книги на\n",
+    "чтение.\n",
+    "\n",
+    "3. Научная литература (ScientificLiterature) (если требуется третий класс):\n",
+    "Должен содержать дополнительные атрибуты, такие как Область науки\n",
+    "(FieldOfScience). Метод GetInfo() должен быть переопределен для включения\n",
+    "информации об области науки в описании книги.\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) и реализуйте полиморфизм с перекрытием и прегегрузкой методов, а также generic классы"
@@ -52,8 +88,323 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Книга 'Алгебра и начала математического анализа 11 класс' добавлена в библиотеку.\n",
+      "Книга 'Война и мир' добавлена в библиотеку.\n",
+      "Книга 'Классическая механика' добавлена в библиотеку.\n",
+      "Книга 'Научная энциклопедия' добавлена в библиотеку.\n",
+      "Список всех книг в библиотеке:\n",
+      "Название: Алгебра и начала математического анализа 11 класс, Автор: Колягин Ю. М., Год издания: 2014, Издатель: Просвещение, Страниц: 320\n",
+      "Название: Война и мир, Автор: Толстой Л.Н., Год издания: 1869, Издатель: Эксмо, Страниц: 1200\n",
+      "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Издатель: Наука, Страниц: 450, Область науки: Физика\n",
+      "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
+      "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Издатель: Наука, Страниц: 450, Область науки: Физика\n",
+      "Вам выдали книгу 'Классическая механика'\n",
+      "Вы читаете книгу 'Классическая механика'\n",
+      "Вы проводите обзор литературы по теме 'Физика' на основе книги 'Классическая механика'\n",
+      "Вы вернули книгу 'Классическая механика'\n",
+      "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
+      "Буранов Алексей Михайлович взял(а) книгу 'Научная энциклопедия'\n",
+      "Книга 'Научная энциклопедия' зарезервирована на 7 дней.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Book : IBook\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Author { get; set; }\n",
+    "    public int YearOfPublication { get; set; }\n",
+    "    public string Publisher { get; set; }\n",
+    "    public int Pages { get; set; }\n",
+    "    public bool IsAvailable { get; set; }\n",
+    "    public bool IsReserved { get; set; }\n",
+    "    public bool IsBorrowed { get; set; }\n",
+    "\n",
+    "    public Book(string title, string author, int yearOfPublication, string publisher, int pages)\n",
+    "    {\n",
+    "        Title = title;\n",
+    "        Author = author;\n",
+    "        YearOfPublication = yearOfPublication;\n",
+    "        Publisher = publisher;\n",
+    "        Pages = pages;\n",
+    "        IsAvailable = true;\n",
+    "        IsReserved = false;\n",
+    "        IsBorrowed = false;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Read()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы читаете книгу '{Title}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её, чтобы читать.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Borrow()\n",
+    "    {\n",
+    "        if (IsAvailable)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вам выдали книгу '{Title}'\");\n",
+    "            IsAvailable = false;\n",
+    "            IsBorrowed = true;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' недоступна.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Borrow(string borrowerName)\n",
+    "    {\n",
+    "        if (IsAvailable)\n",
+    "        {\n",
+    "            Console.WriteLine($\"{borrowerName} взял(а) книгу '{Title}'\");\n",
+    "            IsAvailable = false;\n",
+    "            IsBorrowed = true;\n",
+    "            IsReserved = false;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' недоступна.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Return()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы вернули книгу '{Title}'\");\n",
+    "            IsAvailable = true;\n",
+    "            IsBorrowed = false;\n",
+    "            IsReserved = false;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' не была взята, поэтому её нельзя вернуть.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Reserve(int days)\n",
+    "    {\n",
+    "        if (!IsAvailable && !IsReserved)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' зарезервирована на {days} дней.\");\n",
+    "            IsReserved = true;\n",
+    "        }\n",
+    "        else if (IsAvailable)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' доступна и не может быть зарезервирована.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "             Console.WriteLine($\"Книга '{Title}' уже зарезервирована.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Textbook : Book, ITextbook\n",
+    "{\n",
+    "    public string Subject { get; set; }\n",
+    "\n",
+    "    public Textbook(string title, string author, int yearOfPublication, string publisher, int pages, string subject)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        Subject = subject;\n",
+    "    }\n",
+    "\n",
+    "    public override void Read()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы читаете учебник '{Title}' по предмету '{Subject}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Учебник '{Title}' не был взят. Сначала возьмите его.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void Study()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы изучаете учебник '{Title}' по предмету '{Subject}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Учебник '{Title}' не был взят. Сначала возьмите его.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fiction : Book, IFiction\n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "\n",
+    "    public Fiction(string title, string author, int yearOfPublication, string publisher, int pages, string genre)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        Genre = genre;\n",
+    "    }\n",
+    "\n",
+    "    public override void Borrow()\n",
+    "    {\n",
+    "        if (IsAvailable)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вам выдали художественную книгу '{Title}', жанр: '{Genre}'\");\n",
+    "            IsAvailable = false;\n",
+    "            IsBorrowed = true;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' недоступна.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void Analyze()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы анализируете прочитанную главу книги '{Title}' жанра '{Genre}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её, чтобы анализировать.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class ScientificLiterature : Book, IScientificLiterature\n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public ScientificLiterature(string title, string author, int yearOfPublication, string publisher, int pages, string fieldOfScience)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
+    "    }\n",
+    "\n",
+    "    public void ReviewLiterature()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы проводите обзор литературы по теме '{FieldOfScience}' на основе книги '{Title}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её, чтобы проводить обзор литературы.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Encyclopedia : Book, IScientificLiterature, IReferenceBook\n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public Encyclopedia(string title, string author, int yearOfPublication, string publisher, int pages, string fieldOfScience)\n",
+    "        : base(title, author, yearOfPublication, publisher, pages)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Энциклопедия: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
+    "    }\n",
+    "\n",
+    "    public void ReviewLiterature()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Обзор литературы по теме '{FieldOfScience}' из энциклопедии '{Title}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Энциклопедия '{Title}' не была взята. Сначала возьмите её.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void FindInformation()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Вы ищете информацию в энциклопедии '{Title}'\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Энциклопедия '{Title}' не была взята. Сначала возьмите её.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Library<T> where T : IBook\n",
+    "{\n",
+    "    private List<T> books = new List<T>();\n",
+    "\n",
+    "    public void AddBook(T book)\n",
+    "    {\n",
+    "        books.Add(book);\n",
+    "        Console.WriteLine($\"Книга '{book.Title}' добавлена в библиотеку.\");\n",
+    "    }\n",
+    "\n",
+    "    public void RemoveBook(T book)\n",
+    "    {\n",
+    "        books.Remove(book);\n",
+    "        Console.WriteLine($\"Книга '{book.Title}' удалена из библиотеки.\");\n",
+    "    }\n",
+    "\n",
+    "    public void ShowAllBooks()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Список всех книг в библиотеке:\");\n",
+    "        foreach (var book in books)\n",
+    "        {\n",
+    "            book.GetInfo();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Textbook mathTextbook = new Textbook(\"Алгебра и начала математического анализа 11 класс\", \"Колягин Ю. М.\", 2014, \"Просвещение\", 320, \"Математика\");\n",
+    "Fiction novel = new Fiction(\"Война и мир\", \"Толстой Л.Н.\", 1869, \"Эксмо\", 1200, \"Исторический роман\");\n",
+    "ScientificLiterature physicsBook = new ScientificLiterature(\"Классическая механика\", \"Ньютон И.С.\", 1687, \"Наука\", 450, \"Физика\");\n",
+    "Encyclopedia scienceEncyclopedia = new Encyclopedia(\"Научная энциклопедия\", \"Коллектив авторов\", 2022, \"Наука\", 1500, \"Наука\");\n",
+    "\n",
+    "Library<Book> library = new Library<Book>();\n",
+    "\n",
+    "library.AddBook(mathTextbook);\n",
+    "library.AddBook(novel);\n",
+    "library.AddBook(physicsBook);\n",
+    "library.AddBook(scienceEncyclopedia);\n",
+    "library.ShowAllBooks();\n",
+    "\n",
+    "physicsBook.GetInfo();\n",
+    "physicsBook.Borrow();\n",
+    "physicsBook.Read();\n",
+    "physicsBook.ReviewLiterature();\n",
+    "physicsBook.Return();\n",
+    "\n",
+    "scienceEncyclopedia.GetInfo();\n",
+    "scienceEncyclopedia.Borrow(\"Буранов Алексей Михайлович\");\n",
+    "scienceEncyclopedia.Reserve(7);\n"
+   ]
   }
  ],
  "metadata": {
