--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -104,7 +104,7 @@
       "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
       "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Издатель: Наука, Страниц: 450, Область науки: Физика\n",
       "Вам выдали книгу 'Классическая механика'\n",
-      "Вы читаете книгу 'Классическая механика'\n",
+      "Вы читаете книгу 'Классическая механика' по теме 'Физика'\n",
       "Вы проводите обзор литературы по теме 'Физика' на основе книги 'Классическая механика'\n",
       "Вы вернули книгу 'Классическая механика'\n",
       "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
@@ -114,6 +114,46 @@
     }
    ],
    "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public interface IBook\n",
+    "{\n",
+    "    string Title { get; }\n",
+    "    string Author { get; }\n",
+    "    int YearOfPublication { get; }\n",
+    "    string Publisher { get; }\n",
+    "    int Pages { get; }\n",
+    "    bool IsAvailable { get; set; }\n",
+    "    bool IsReserved { get; set; }\n",
+    "    bool IsBorrowed { get; set; }\n",
+    "    void GetInfo();\n",
+    "    void Borrow();\n",
+    "    void Borrow(string borrowerName);\n",
+    "    void Return();\n",
+    "    void Reserve(int days);\n",
+    "}\n",
+    "\n",
+    "public interface ITextbook\n",
+    "{\n",
+    "    void Study();\n",
+    "}\n",
+    "\n",
+    "public interface IFiction\n",
+    "{\n",
+    "    void Analyze();\n",
+    "}\n",
+    "\n",
+    "public interface IScientificLiterature\n",
+    "{\n",
+    "    void ReviewLiterature();\n",
+    "}\n",
+    "\n",
+    "public interface IReferenceBook\n",
+    "{\n",
+    "    void FindInformation();\n",
+    "}\n",
+    "\n",
     "public class Book : IBook\n",
     "{\n",
     "    public string Title { get; set; }\n",
@@ -145,13 +185,9 @@
     "    public virtual void Read()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Вы читаете книгу '{Title}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её, чтобы читать.\");\n",
-    "        }\n",
     "    }\n",
     "\n",
     "    public virtual void Borrow()\n",
@@ -211,7 +247,7 @@
     "        }\n",
     "        else\n",
     "        {\n",
-    "             Console.WriteLine($\"Книга '{Title}' уже зарезервирована.\");\n",
+    "            Console.WriteLine($\"Книга '{Title}' уже зарезервирована.\");\n",
     "        }\n",
     "    }\n",
     "}\n",
@@ -229,25 +265,17 @@
     "    public override void Read()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Вы читаете учебник '{Title}' по предмету '{Subject}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Учебник '{Title}' не был взят. Сначала возьмите его.\");\n",
-    "        }\n",
     "    }\n",
     "\n",
     "    public void Study()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Вы изучаете учебник '{Title}' по предмету '{Subject}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Учебник '{Title}' не был взят. Сначала возьмите его.\");\n",
-    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -278,13 +306,9 @@
     "    public void Analyze()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Вы анализируете прочитанную главу книги '{Title}' жанра '{Genre}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её, чтобы анализировать.\");\n",
-    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -303,16 +327,20 @@
     "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
     "    }\n",
     "\n",
+    "    public override void Read()\n",
+    "    {\n",
+    "        if (IsBorrowed)\n",
+    "            Console.WriteLine($\"Вы читаете книгу '{Title}' по теме '{FieldOfScience}'\");\n",
+    "        else\n",
+    "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её.\");\n",
+    "    }\n",
+    "\n",
     "    public void ReviewLiterature()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Вы проводите обзор литературы по теме '{FieldOfScience}' на основе книги '{Title}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её, чтобы проводить обзор литературы.\");\n",
-    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -334,25 +362,17 @@
     "    public void ReviewLiterature()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Обзор литературы по теме '{FieldOfScience}' из энциклопедии '{Title}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Энциклопедия '{Title}' не была взята. Сначала возьмите её.\");\n",
-    "        }\n",
     "    }\n",
     "\n",
     "    public void FindInformation()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
-    "        {\n",
     "            Console.WriteLine($\"Вы ищете информацию в энциклопедии '{Title}'\");\n",
-    "        }\n",
     "        else\n",
-    "        {\n",
     "            Console.WriteLine($\"Энциклопедия '{Title}' не была взята. Сначала возьмите её.\");\n",
-    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -376,9 +396,7 @@
     "    {\n",
     "        Console.WriteLine(\"Список всех книг в библиотеке:\");\n",
     "        foreach (var book in books)\n",
-    "        {\n",
     "            book.GetInfo();\n",
-    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -403,7 +421,7 @@
     "\n",
     "scienceEncyclopedia.GetInfo();\n",
     "scienceEncyclopedia.Borrow(\"Буранов Алексей Михайлович\");\n",
-    "scienceEncyclopedia.Reserve(7);\n"
+    "scienceEncyclopedia.Reserve(7);"
    ]
   }
  ],
