--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -108,12 +108,12 @@
       "Вы читаете книгу 'Классическая механика'\n",
       "Вы проводите обзор литературы по теме 'Физика' на основе книги 'Классическая механика'\n",
       "Вы вернули книгу 'Классическая механика'\n",
-      "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
-      "Вам выдали книгу 'Научная энциклопедия'\n",
-      "Вы читаете книгу 'Научная энциклопедия'\n",
-      "Обзор литературы по теме 'Наука' из энциклопедии 'Научная энциклопедия'\n",
-      "Вы ищете информацию в энциклопедии 'Научная энциклопедия'\n",
-      "Вы вернули книгу 'Научная энциклопедия'\n"
+      "Энциклопедия: Большая советская энциклопедия, Автор: Коллектив авторов под редакцией Отто Ю. Шмидта, Год издания: 1978, Издатель: Советская энциклопедия, Страниц: 3000, Область науки: Общественные и естественные науки, охватывающие широкий спектр знаний.\n",
+      "Вам выдали книгу 'Большая советская энциклопедия'\n",
+      "Вы читаете книгу 'Большая советская энциклопедия'\n",
+      "Обзор литературы по теме 'Общественные и естественные науки, охватывающие широкий спектр знаний.' из энциклопедии 'Большая советская энциклопедия'\n",
+      "Вы ищете информацию в энциклопедии 'Большая советская энциклопедия'\n",
+      "Вы вернули книгу 'Большая советская энциклопедия'\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
     "    void ReviewLiterature();\n",
     "}\n",
     "\n",
-    "public interface IReferenceBook\n",
+    "public interface IEncyclopedia\n",
     "{\n",
     "    void FindInformation();\n",
     "}\n",
@@ -275,7 +275,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "public class Encyclopedia : Book, IScientificLiterature, IReferenceBook \n",
+    "public class Encyclopedia : Book, IScientificLiterature, IEncyclopedia \n",
     "{\n",
     "    public string FieldOfScience { get; set; }\n",
     "\n",
@@ -304,7 +304,7 @@
     "Textbook mathTextbook = new Textbook(\"Алгебра и начала математического анализа 11 класс\", \"Колягин Ю. М.\", 2014, \"Просвещение\", 320, \"Математика\");\n",
     "Fiction novel = new Fiction(\"Война и мир\", \"Толстой Л.Н.\", 1869, \"Эксмо\", 1200, \"Исторический роман\");\n",
     "ScientificLiterature physicsBook = new ScientificLiterature(\"Классическая механика\", \"Ньютон И.С.\", 1687, \"Наука\", 450, \"Физика\");\n",
-    "Encyclopedia scienceEncyclopedia = new Encyclopedia(\"Научная энциклопедия\", \"Коллектив авторов\", 2022, \"Наука\", 1500, \"Наука\");\n",
+    "Encyclopedia scienceEncyclopedia = new Encyclopedia(\"Большая советская энциклопедия\", \"Коллектив авторов под редакцией Отто Ю. Шмидта\", 1978, \"Советская энциклопедия\", 3000, \"Общественные и естественные науки, охватывающие широкий спектр знаний.\");\n",
     "\n",
     "mathTextbook.GetInfo();\n",
     "mathTextbook.Borrow();\n",
