--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -96,20 +96,20 @@
       "Книга 'Алгебра и начала математического анализа 11 класс' добавлена в библиотеку.\n",
       "Книга 'Война и мир' добавлена в библиотеку.\n",
       "Книга 'Классическая механика' добавлена в библиотеку.\n",
-      "Книга 'Научная энциклопедия' добавлена в библиотеку.\n",
+      "Книга 'Большая советская энциклопедия' добавлена в библиотеку.\n",
       "Список всех книг в библиотеке:\n",
       "Название: Алгебра и начала математического анализа 11 класс, Автор: Колягин Ю. М., Год издания: 2014, Издатель: Просвещение, Страниц: 320\n",
       "Название: Война и мир, Автор: Толстой Л.Н., Год издания: 1869, Издатель: Эксмо, Страниц: 1200\n",
       "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Издатель: Наука, Страниц: 450, Область науки: Физика\n",
-      "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
+      "Название: Большая советская энциклопедия, Автор: Коллектив авторов под редакцией Отто Ю. Шмидта, Год издания: 1978, Издатель: Советская энциклопедия, Страниц: 3000, Область науки: Общественные и естественные науки, охватывающие широкий спектр знаний.\n",
       "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Издатель: Наука, Страниц: 450, Область науки: Физика\n",
       "Вам выдали книгу 'Классическая механика'\n",
-      "Вы читаете книгу 'Классическая механика' по теме 'Физика'\n",
+      "Вы читаете книгу 'Классическая механика'\n",
       "Вы проводите обзор литературы по теме 'Физика' на основе книги 'Классическая механика'\n",
       "Вы вернули книгу 'Классическая механика'\n",
-      "Энциклопедия: Научная энциклопедия, Автор: Коллектив авторов, Год издания: 2022, Издатель: Наука, Страниц: 1500, Область науки: Наука\n",
-      "Буранов Алексей Михайлович взял(а) книгу 'Научная энциклопедия'\n",
-      "Книга 'Научная энциклопедия' зарезервирована на 7 дней.\n"
+      "Название: Большая советская энциклопедия, Автор: Коллектив авторов под редакцией Отто Ю. Шмидта, Год издания: 1978, Издатель: Советская энциклопедия, Страниц: 3000, Область науки: Общественные и естественные науки, охватывающие широкий спектр знаний.\n",
+      "Буранов Алексей Михайлович взял(а) книгу 'Большая советская энциклопедия'\n",
+      "Книга 'Большая советская энциклопедия' зарезервирована на 7 дней.\n"
      ]
     }
    ],
@@ -128,6 +128,7 @@
     "    bool IsReserved { get; set; }\n",
     "    bool IsBorrowed { get; set; }\n",
     "    void GetInfo();\n",
+    "    void Read();\n",
     "    void Borrow();\n",
     "    void Borrow(string borrowerName);\n",
     "    void Return();\n",
@@ -149,7 +150,7 @@
     "    void ReviewLiterature();\n",
     "}\n",
     "\n",
-    "public interface IReferenceBook\n",
+    "public interface IEncyclopedia\n",
     "{\n",
     "    void FindInformation();\n",
     "}\n",
@@ -322,18 +323,11 @@
     "        FieldOfScience = fieldOfScience;\n",
     "    }\n",
     "\n",
-    "    public override void GetInfo()\n",
+    "    public override void GetInfo() \n",
     "    {\n",
     "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
     "    }\n",
     "\n",
-    "    public override void Read()\n",
-    "    {\n",
-    "        if (IsBorrowed)\n",
-    "            Console.WriteLine($\"Вы читаете книгу '{Title}' по теме '{FieldOfScience}'\");\n",
-    "        else\n",
-    "            Console.WriteLine($\"Книга '{Title}' не была взята. Сначала возьмите её.\");\n",
-    "    }\n",
     "\n",
     "    public void ReviewLiterature()\n",
     "    {\n",
@@ -344,7 +338,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "public class Encyclopedia : Book, IScientificLiterature, IReferenceBook\n",
+    "public class Encyclopedia : Book, IScientificLiterature, IEncyclopedia\n",
     "{\n",
     "    public string FieldOfScience { get; set; }\n",
     "\n",
@@ -354,25 +348,32 @@
     "        FieldOfScience = fieldOfScience;\n",
     "    }\n",
     "\n",
-    "    public override void GetInfo()\n",
+    "    public override void GetInfo() \n",
     "    {\n",
-    "        Console.WriteLine($\"Энциклопедия: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Издатель: {Publisher}, Страниц: {Pages}, Область науки: {FieldOfScience}\");\n",
     "    }\n",
-    "\n",
     "    public void ReviewLiterature()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
+    "        {\n",
     "            Console.WriteLine($\"Обзор литературы по теме '{FieldOfScience}' из энциклопедии '{Title}'\");\n",
+    "        }\n",
     "        else\n",
+    "        {\n",
     "            Console.WriteLine($\"Энциклопедия '{Title}' не была взята. Сначала возьмите её.\");\n",
+    "        }\n",
     "    }\n",
     "\n",
     "    public void FindInformation()\n",
     "    {\n",
     "        if (IsBorrowed)\n",
+    "        {\n",
     "            Console.WriteLine($\"Вы ищете информацию в энциклопедии '{Title}'\");\n",
+    "        }\n",
     "        else\n",
+    "        {\n",
     "            Console.WriteLine($\"Энциклопедия '{Title}' не была взята. Сначала возьмите её.\");\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -396,14 +397,16 @@
     "    {\n",
     "        Console.WriteLine(\"Список всех книг в библиотеке:\");\n",
     "        foreach (var book in books)\n",
+    "        {\n",
     "            book.GetInfo();\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
     "Textbook mathTextbook = new Textbook(\"Алгебра и начала математического анализа 11 класс\", \"Колягин Ю. М.\", 2014, \"Просвещение\", 320, \"Математика\");\n",
     "Fiction novel = new Fiction(\"Война и мир\", \"Толстой Л.Н.\", 1869, \"Эксмо\", 1200, \"Исторический роман\");\n",
     "ScientificLiterature physicsBook = new ScientificLiterature(\"Классическая механика\", \"Ньютон И.С.\", 1687, \"Наука\", 450, \"Физика\");\n",
-    "Encyclopedia scienceEncyclopedia = new Encyclopedia(\"Научная энциклопедия\", \"Коллектив авторов\", 2022, \"Наука\", 1500, \"Наука\");\n",
+    "Encyclopedia scienceEncyclopedia = new Encyclopedia(\"Большая советская энциклопедия\", \"Коллектив авторов под редакцией Отто Ю. Шмидта\", 1978, \"Советская энциклопедия\", 3000, \"Общественные и естественные науки, охватывающие широкий спектр знаний.\");\n",
     "\n",
     "Library<Book> library = new Library<Book>();\n",
     "\n",
